making it build in intellij